--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -1,10 +1,20 @@
+.container{
+    position: sticky;
+    top: 0;
+    right: 0;
+
+    background-color: #030712;
+}
+
 .navbar {
   display: flex;
   align-items: center;
   justify-content: space-between;
 
   padding: 0 40px;
+  height: 60px;
 }
+
 .navbar_links {
   display: flex;
   gap: 20px;
@@ -29,5 +39,41 @@
 }
 
 .active{
-    color: green;
+    color: rgb(179, 173, 173);
+    text-decoration: underline;
+}
+
+.divider{
+      height: 1px;
+      background: white;
+}
+
+
+
+@media screen and (min-width:1401px){
+   
+}
+@media screen and (max-width:1400px){
+   
+}
+@media screen and (max-width:1200px){
+ 
+}
+@media screen and (max-width:992px){
+.navbar_links{
+    position: absolute;
+    right: -600px;
+    top: 0;
+    height: 100vh;
+    width: 300px;
+    background-color: green;
+
+    flex-direction: column;
+}
+}
+@media screen and (max-width:768){
+  
+}
+@media screen and (max-width:575px){
+ 
 }
